--- a/src/assets/sass/common.scss
+++ b/src/assets/sass/common.scss
@@ -5,6 +5,22 @@
   padding: 0;
 }
 
+body {
+  background-color: #e1e1e1;
+}
+
+a {
+  text-decoration: none;
+}
+
 ul, li {
   list-style: none;
+}
+
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
 }
