feat: add user info

--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -11,6 +11,13 @@ a {
     float: right;
 }
 
+.sidebar {
+    width: 290px;
+    font-size: 14px;
+    float: right;
+    margin-bottom: 20px;
+}
+
 .main {
     min-width: 960px;
     max-width: 1400px;
